[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]


[tool.ruff]

target-version = "py38"

# Match the old configured flake8 line length
line-length = 120

# Which checkers to enable?
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  # "UP",  # pyupgrade
  "N", # pep8-naming
]


[tool.ruff.per-file-ignores]

# Allow the (not-previously-linted) PBS script to continue having long lines
"bin/ard_pbs" = ["E501"]

[tool.black]
line-length = 90
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.setuptools_scm]
write_to = "tesp/version.py"
version_scheme = "post-release"
